# aoc2022_ocaml

./: README.md  aoc2022_ocaml.opam  dune-project
input/: day22
lib/: day_00.ml  day_01.ml  day_02.ml  day_03.ml  day_04.ml  day_05.ml  day_06.ml  day_07.ml  day_08.ml  day_09.ml  day_10.ml  day_11.ml  day_12.ml  day_13.ml  day_14.ml  day_15.ml  day_16.ml  day_17.ml  day_18.ml  day_20.ml  day_21.ml  day_22.ml  day_23.ml  day_25.ml  dune  solver.ml
test/: dune  test1.ml
