(lang dune 3.6)

(name aoc2022_ocaml)

(generate_opam_files true)

(source
 (github evgenypetrovsky/aoc2022_ocaml))

(authors "Evgeny Petrovskiy")

(maintainers "None")

(license MIT)

(package
 (name aoc2022_ocaml)
 (synopsis "Learning Ocaml by solving Advent Of Code problems")
 (description "This is a learn project to become familiar with Ocaml programming language. ")
 (depends ocaml dune)
 (tags
  ("ocaml" "advent of code" "aoc" "aoc 2022")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
